--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,104 @@
-*,
-*::before,
-*::after {
+* {
     box-sizing: border-box;
+}
+section {
+    align-items: center;
+    padding: 200px 400px 400px 400px;
+}
+
+ul {
     margin: 0;
     padding: 0;
 }
 
-body {
-    background-color: #5a5353;
-    color: whitesmoke;
+ul li {
+    cursor: pointer;
+    position: relative;
+    padding: 12px 8px 12px 40px;
+    background: #eee;
+    font-size: 24px;
+    transition: 0.2s;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+ul li:nth-child(odd) {
+    background: #f9f9f9;
+}
+
+ul li:hover {
+    background: #ddd;
+}
+
+ul li.checked {
+    background: #0fd350;
+    color: #fff;
+    text-decoration: line-through;
+}
+
+ul li.checked::before {
+    content: '';
+    position: absolute;
+    border-color: #1b7305;
+    border-style: solid;
+    border-width: 0 2px 2px 0;
+    top: 10px;
+    left: 16px;
+    transform: rotate(45deg);
+    height: 15px;
+    width: 7px;
+}
+
+.close {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 12px 16px 12px 16px;
+}
+
+.close:hover {
+    background-color: #0981b9;
+    color: rgb(19, 18, 18);
+}
+
+.header {
+    background-color: #0981b9;
+    padding: 5px 40px;
+    color: white;
+    text-align: center;
+}
+
+.header:after {
+    content: '';
+    display: table;
+    clear: both;
+}
+
+input {
+    margin: 0;
+    border: #555;
+    border-radius: 10px;
+    width: 75%;
+    padding: 10px;
+    float: left;
+    font-size: 16px;
+}
+
+.addBtn {
+    padding: 10px;
+    width: 25%;
+    background: #d9d9d9;
+    color: #555;
+    float: left;
+    text-align: center;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 0.3s;
+    border-radius: 10px;
+}
+
+.addBtn:hover {
+    background-color: #bbb;
 }
