--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,29 @@
 * {
     box-sizing: border-box;
 }
+
+body {
+    background-color: #f0e7d8;
+    font-family: 'Courier New', monospace;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
 section {
     align-items: center;
-    padding: 200px 400px 400px 400px;
+    padding: 100px 200px;
+    background-color: #d1c4ab;
+    border: 2px solid #7f6c53;
+    border-radius: 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 ul {
+    list-style-type: none;
     margin: 0;
     padding: 0;
 }
@@ -15,25 +32,28 @@ ul li {
     cursor: pointer;
     position: relative;
     padding: 12px 8px 12px 40px;
-    background: #eee;
-    font-size: 24px;
+    background: #e1d7c7;
+    font-size: 20px;
     transition: 0.2s;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    border: 1px solid #7f6c53;
+    border-radius: 5px;
+    margin: 5px 0;
 }
 
 ul li:nth-child(odd) {
-    background: #f9f9f9;
+    background: #d6ccb9;
 }
 
 ul li:hover {
-    background: #ddd;
+    background: #c0b29e;
 }
 
 ul li.checked {
-    background: #0fd350;
+    background: #8da558;
     color: #fff;
     text-decoration: line-through;
 }
@@ -41,7 +61,7 @@ ul li.checked {
 ul li.checked::before {
     content: '';
     position: absolute;
-    border-color: #1b7305;
+    border-color: #546a39;
     border-style: solid;
     border-width: 0 2px 2px 0;
     top: 10px;
@@ -55,19 +75,21 @@ ul li.checked::before {
     position: absolute;
     right: 0;
     top: 0;
-    padding: 12px 16px 12px 16px;
+    padding: 8px 12px;
+    color: #7f6c53;
 }
 
 .close:hover {
-    background-color: #0981b9;
-    color: rgb(19, 18, 18);
+    background-color: #c0b29e;
+    color: #3e3123;
 }
 
 .header {
-    background-color: #0981b9;
+    background-color: #7f6c53;
     padding: 5px 40px;
-    color: white;
+    color: #f0e7d8;
     text-align: center;
+    border-radius: 10px 10px 0 0;
 }
 
 .header:after {
@@ -78,27 +100,27 @@ ul li.checked::before {
 
 input {
     margin: 0;
-    border: #555;
-    border-radius: 10px;
-    width: 75%;
-    padding: 10px;
+    border: 1px solid #7f6c53;
+    border-radius: 5px;
+    width: 70%;
+    padding: 8px;
     float: left;
     font-size: 16px;
 }
 
 .addBtn {
-    padding: 10px;
-    width: 25%;
-    background: #d9d9d9;
-    color: #555;
+    padding: 8px;
+    width: 30%;
+    background: #d1c4ab;
+    color: #7f6c53;
     float: left;
     text-align: center;
     font-size: 16px;
     cursor: pointer;
     transition: 0.3s;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 .addBtn:hover {
-    background-color: #bbb;
+    background-color: #c0b29e;
 }
